fix: 修复 Android 版本兼容性问题并移除弃用 API 调用
- 使用 `getDeclaredConstructor()` 替代 `newInstance()` 以符合 Android 安全规范
- 更新网络状态检查以支持 Android M 及以上版本的新 API
- 为弃用方法添加 `@SuppressWarnings` 注解
- 移除 Manifest 中重复的权限和组件声明
- 将 `AsyncTask.THREAD_POOL_EXECUTOR` 替换为专用线程池
- 改进对话框按钮文本和进度显示